--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -90,6 +90,7 @@ form{
     align-items: center;
     background-color: white;
     color: black;
+    
 }
 .api_data_elements{
     margin: 0 15px;
@@ -126,5 +127,26 @@ form{
     color: white;
     font-size: 18px;
     font-weight: 500;
+}.book_ticket{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.book_ticket button{
+    width: 120px;
+    height: 50px;
+    padding: 10px;
+    font: 20px;
+    font-weight: 600;
+    background: rgb(35, 231, 107);
+    border: none;
+
 }
 
+
+.api__data_element_warpper{
+    display: flex;
+    
+}
