--- a/src/components/seat/seatcontainer.css
+++ b/src/components/seat/seatcontainer.css
@@ -1,18 +1,29 @@
 .seat_container{
-    width: 300px;
+    width: 350px;
     height: 200px;
-    border: 1px solid red;
+    background: var(--red);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
 }
+.seat_container_center{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .seat_container button{
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 3px;
+    border: none;
+    border-radius: 3px;
+    font-size: 14px;
+    font-weight: 600;
     
 }
 .double_seat{
@@ -20,7 +31,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 300px;
     height: 70px;
     
